# dave

./: Cargo.toml  README  build.rs  dave_land_file.ron  dave_linux_install.sh
dave_conf/etc/: dave.conf
dave_conf/etc/daves_assets/models/dave_cars/: burger.glb  dave_challenger.glb
dave_conf/etc/daves_quiz/: gen_av_quiz.tsv  mil_av_quiz.tsv  strek_quiz.tsv  swars_quiz.tsv
dave_conf/var/daves_machines/: dbscan_clustered_dataset.npy  dbscan_clustered_memberships.npy  kmeans_clustered_dataset.npy  kmeans_clustered_memberships.npy
dave_conf/var/daves_quiz/: animal_quiz.tsv  gen_av_quiz.tsv  mil_av_quiz.tsv  strek_quiz.tsv  swars_quiz.tsv
dave_land_map/: map.gv
dave_map/: dave_map.awk  map.gv
src/: config.rs  dave_breakout.rs  dave_budget.rs  dave_calc.rs  dave_calcs.rs  dave_cars.rs  dave_chip8.rs  dave_conversions.rs  dave_currency.rs  dave_db.rs  dave_ecs.rs  dave_ed.rs  dave_encrypt.rs  dave_game.rs  dave_genetic_algo.rs  dave_graphics.rs  dave_grep.rs  dave_guess.rs  dave_gui.rs  dave_hash.rs  dave_land.rs  dave_land_lib.rs  dave_machine.rs  dave_neural_net.rs  dave_neural_sim.rs  dave_neural_sim_wasm.rs  dave_notes.rs  dave_parse.rs  dave_perceptron.rs  dave_port_scan.rs  dave_quiz.rs  dave_rep_max.rs  dave_scrape.rs  dave_skybox.rs  dave_snake.rs  dave_stress_tests.rs  dave_tic_tac_toe.rs  lib.rs  main.rs  perceptron.rs  (+2 more)
