[package]
name = "dave"
version = "7.6.0"
edition = "2021"

[lib]
name = "davelib"
path = "src/lib.rs"

[[bin]]
name = "dave"
path = "src/main.rs"
doc = false

[build-dependencies]
chrono = "0.4"

[dependencies]
age = "0.10"
bincode = "1"
bytesize = "1"
clap = "4"
colored = "2"
hex = "0.4"
iso_currency = "0.4"
lazy_static = "1"
md5 = "0.7"
rand = "0.8"
regex = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
spinners = "4"
walkdir = "2"
