[package]
name = "dave"
version = "8.6.5"
edition = "2021"

[lib]
name = "davelib"
path = "src/lib.rs"

[[bin]]
name = "dave"
path = "src/main.rs"
doc = false

[build-dependencies]
chrono = "0.4"

[dependencies]
age = "0.10"
bincode = "1"
bytesize = "1"
chrono = "0.4"
clap = "4"
colored = "2"
crossterm = "0.27"
file-format = "0.24"
futures = "0.3"
headless_chrome = "1"
hex = "0.4"
indexmap = "2"
iso_currency = "0.4"
lazy_static = "1"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-datasets = { version = "0.7", features = ["generate"] }
linfa-nn = "0.7"
md5 = "0.7"
ndarray = "0.15"
ndarray-npy = "0.8"
ndarray-rand = "0.14"
nom = "7"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
ron = "0.8"
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
spinners = "4"
sysinfo = "0.30"
tabled = "0.13"
tokio = { version = "1", features = ["full"] }
tui = "0.19"
walkdir = "2"
