[package]
name = "dave"
version = "9.9.3"
edition = "2021"

[lib]
name = "davelib"
path = "src/lib.rs"

[[bin]]
name = "dave"
path = "src/main.rs"
doc = false

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
approx = "0.4"
test-case = "3"

[dependencies]
age = "0.10"
bevy = "0.13"
bincode = "1"
bytesize = "1"
chrono = "0.4"
clap = "4"
colored = "2"
crossterm = "0.27"
eframe = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
file-format = { version = "0.24", features = ["reader"] }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
headless_chrome = "1"
hex = "0.4"
indexmap = "2"
iso_currency = "0.4"
itertools = "0.13"
lazy_static = "1"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-datasets = { version = "0.7", features = ["generate"] }
linfa-nn = "0.7"
maplit = "1"
md5 = "0.7"
nalgebra = { version = "0.33", features = ["rand-no-std"] }
ndarray = "0.15"
ndarray-npy = "0.8"
ndarray-rand = "0.14"
nom = "7"
ordered-float = { version = "4.2.0", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
ron = "0.8"
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
sled = "0.34"
spinners = "4"
sysinfo = "0.30"
tabled = "0.13"
termion = "4"
tokio = { version = "1", features = ["full"] }
tui = "0.19"
unicode-segmentation = "1"
walkdir = "2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
